--- a/violence.qmd
+++ b/violence.qmd
@@ -5,7 +5,7 @@ code-fold: true
 ---
 
 # Political Violence
-This analysis uses data from The Prosecution Project Dataset (Loadenthal et al. 2023) to examine the number of prosecutions for violent crimes across ideological affiliations. The dataset includes information on various criminal methods, ideological affiliations, and prosecution details.
+This analysis uses data from The Prosecution Project Dataset (Loadenthal et al. 2023) to examine the number of prosecutions in the United States for violent crimes across ideological affiliations. The dataset includes information on various criminal methods, ideological affiliations, and prosecution details.
 
 ```{r}
 #| message: false
@@ -20,25 +20,30 @@ suppressPackageStartupMessages({
 
 ## Prepare the data
 
-Import the data and clean the column names.
+Import the data, clean the column names, and filter for only the US.
 ```{r}
 #| message: false
 #| warning: false
 df <- read_csv("data/tpp-2025-09-15-general.csv") |> 
     clean_names()
+
+df <- df |> 
+    filter(location_country == "United States")
 ```
 
 How many cases are not linked or motivated politically?
 ```{r}
 #| message: false
 #| warning: false
-df |>
+total_cases <- nrow(df)
+
+cases_not_political <- df |>
     filter(criminal_method == "Criminal violation not linked or motivated politically") |> 
     nrow()
 ```
 
+There are *`r cases_not_political`* cases not politically motivated out of a total of *`r total_cases` cases*, which is *`r round((cases_not_political / total_cases) * 100, 2)`%*. So, we will exclude the non-politically motivated cases from our analysis.
 
-### Remove cases not politically motivated or unknown, then classify criminal methods as violent or non-violent.
 ```{r}
 #| message: false
 #| warning: false
@@ -46,6 +51,71 @@ df |>
 # remove cases not politically motivated or unknown
 df <- df |>
     filter(!criminal_method %in% c("Unknown/unspecified/undeveloped", "Criminal violation not linked or motivated politically"))
+
+# parse dates
+df <- df |> 
+    mutate(
+        date = str_trim(date),
+        date = lubridate::mdy(date)
+    )
+
+```
+
+Which dates are represented in the data?
+```{r}
+#| message: false
+#| warning: true
+
+# Warn if minimum date is earlier than 1900 or latest date is later than today
+date_range <- range(df$date, na.rm = TRUE)
+if (date_range[1] < as.Date("1900-01-01") || date_range[2] > Sys.Date()) {
+    warning("Date range is outside expected bounds.")
+}
+
+
+df |>
+    summarise(
+        `Earliest Date` = min(date, na.rm = TRUE),
+        `Latest Date` = max(date, na.rm = TRUE)
+    ) |> 
+    knitr::kable()
+```
+
+### Which ideological affiliations are represented in the data?
+```{r}
+#| message: false
+#| warning: false
+df |>
+    count(ideological_affiliation) |> 
+    knitr::kable()
+```
+
+### Simplify ideologies
+Because there are multiple leftist categories and multiple rightist categories, lets add a column that consolidates leftist types and rightest types.
+```{r}
+#| message: false
+#| warning: false
+df <- df |> 
+    mutate(
+        ideology_simple = case_when(
+            str_detect(ideological_affiliation, "Leftist") ~ "Leftist",
+            str_detect(ideological_affiliation, "Rightist") ~ "Rightist",
+            TRUE ~ ideological_affiliation
+        )
+    )
+
+df |>
+    count(ideology_simple, sort = TRUE) |> 
+    knitr::kable()
+```
+
+# Focus on Violence
+
+### How many prosecutions were for violent vs. non-violent methods, by ideological affiliation?
+Then let's filter for only those to make our visualizations
+```{r}
+#| message: false
+#| warning: false
 
 # classify methods as violent or non-violent
 violent <- c(
@@ -67,53 +137,17 @@ df <- df |>
         "non-violent"
     ))
 
-# parse dates
-df <- df |> 
-    mutate(
-        date = str_trim(date),
-        date = lubridate::mdy(date)
-    )
-
-```
-
-### Which ideological affiliations are present?
-```{r}
-#| message: false
-#| warning: false
-df |> count(ideological_affiliation)
-```
-
-### Because there are multiple leftist categories and multiple rightist categories, lets add a column that consolidates leftist types and rightest types.
-```{r}
-#| message: false
-#| warning: false
-df <- df |> 
-    mutate(
-        ideology_simple = case_when(
-            str_detect(ideological_affiliation, "Leftist") ~ "Leftist",
-            str_detect(ideological_affiliation, "Rightist") ~ "Rightist",
-            TRUE ~ ideological_affiliation
-        )
-    )
-
-df |> count(ideology_simple, sort = TRUE)
-```
-
-### How many prosecutions were for violent vs. non-violent methods, by ideological affiliation?
-Then let's filter for only those to make our visualizations
-```{r}
-#| message: false
-#| warning: false
 df |> 
     group_by(ideology_simple, method_type) |> 
     summarise(n = n()) |> 
     pivot_wider(names_from = method_type, values_from = n, values_fill = 0) |>
     select(ideology_simple, violent, `non-violent`) |>
-    arrange(desc(violent))
+    arrange(desc(violent)) |> 
+    knitr::kable()
 
 ```
 
-## Prosections for violent crimes by ideological affiliation
+## Prosections for violent crimes in the US by ideological affiliation
 ```{r}
 #| message: false
 #| warning: false
@@ -133,11 +167,11 @@ ggplot(violent_crimes_by_ideology, aes(x = reorder(ideology_simple, violent_pros
     geom_col(fill = "black", alpha = 0.8) +
     coord_flip() +
     labs(
-        title = "Prosecutions for Violent Crimes",
+        title = "Prosecutions for Violent Crimes in the US",
         subtitle = "Based on The Prosecution Project Dataset",
         x = "Ideological Affiliation",
         y = "Number of Prosecutions for Violent Crimes",
-        caption = "Source: The Prosecution Project, 2023"
+        caption = "Source: The Prosecution Project"
     ) +
     theme_minimal() +
     theme(
@@ -148,11 +182,12 @@ ggplot(violent_crimes_by_ideology, aes(x = reorder(ideology_simple, violent_pros
     )
 ```
 
-## Prosecutions for violent crimes by ideological affiliation by year
+## Prosecutions for violent crimes in the US by ideological affiliation by year
 ```{r}
 #| message: false
 #| warning: false
-#| column: screen-inset
+#| fig-width: 12
+#| column: page
 
 df_yearly <- violent_crimes |>
     mutate(
@@ -172,36 +207,31 @@ ggplot(df_yearly, aes(x = year, y = prosecutions, fill = ideology_simple)) +
         "Nationalist-separatist" = "#8c564b",      # Brown
         "Other" = "#e377c2"                        # Pink
     )) +
+    scale_x_continuous(breaks = scales::pretty_breaks(n = 8)) +
     labs(
-        title = "Total Prosecutions of Violent Crimes by Year",
-        subtitle = "By Ideological Affiliation - Based on The Prosecution Project Dataset",
+        title = "Total Prosecutions of Violent Crimes in the US by Year",
+        subtitle = "By Ideological Affiliation",
         x = "Year",
         y = "Number of Prosecutions",
         fill = "Ideological Affiliation",
-        caption = "Source: The Prosecution Project, 2023"
+        caption = "Source: The Prosecution Project"
     ) +
+    guides(fill = guide_legend(ncol = 1)) +
     theme_minimal() +
     theme(
         plot.title = element_text(size = 14, face = "bold"),
         plot.subtitle = element_text(size = 12),
         axis.text = element_text(size = 10),
         axis.title = element_text(size = 11),
-        legend.position = "bottom",
+        legend.position = "right",
         legend.title = element_text(size = 10),
         legend.text = element_text(size = 9)
-    ) +
-    guides(fill = guide_legend(ncol = 3)) +
-    scale_x_continuous(breaks = scales::pretty_breaks(n = 8))
+    )
 ```
 
 ```{r}
 #| message: false
 #| warning: false
-#| layout-ncol: 2
-#| fig-cap: 
-#|   - "All ideologies."
-#|   - "Excluding Salafi/Jihadist/Islamist."
-#| column: screen-inset
 
 df_deaths <- violent_crimes |>
    group_by(ideology_simple) |> 
@@ -213,11 +243,11 @@ plot1 <- ggplot(df_deaths, aes(x = reorder(ideology_simple, total_deaths),
     geom_col(fill = "black", alpha = 0.8) +
     coord_flip() +
     labs(
-        title = "Total Deaths from Violent Crimes",
-        subtitle = "Based on The Prosecution Project Dataset",
+        title = "Total Deaths from Violent Crimes in the US",
+        subtitle = "",
         x = "Ideological Affiliation",
         y = "Total Deaths from Violent Crimes",
-        caption = "Source: The Prosecution Project, 2023"
+        caption = "Source: The Prosecution Project"
     ) +
     theme_minimal() +
     theme(
@@ -227,32 +257,7 @@ plot1 <- ggplot(df_deaths, aes(x = reorder(ideology_simple, total_deaths),
         axis.title = element_text(size = 11)
     )
 
-# exclude salafi/jihadist/islamist
-plot2 <- violent_crimes |>
-   filter(ideology_simple != "Salafi/Jihadist/Islamist") |>
-   group_by(ideology_simple) |> 
-   summarise(total_deaths = sum(number_killed, na.rm = TRUE)) |> 
-   arrange(desc(total_deaths)) |> 
-   ungroup() |> 
-   ggplot(aes(x = reorder(ideology_simple, total_deaths), y = total_deaths)) +
-       geom_col(fill = "black", alpha = 0.8) +
-       coord_flip() +
-       labs(
-           title = "Total Deaths from Violent Crimes",
-           subtitle = "Excluding Salafi/Jihadist/Islamist",
-           x = "Ideological Affiliation",
-           y = "Total Deaths from Violent Crimes",
-           caption = "Source: The Prosecution Project, 2023"
-       ) +
-       theme_minimal() +
-       theme(
-           plot.title = element_text(size = 14, face = "bold"),
-           plot.subtitle = element_text(size = 12),
-           axis.text = element_text(size = 10),
-           axis.title = element_text(size = 11)
-       )
 plot1
-plot2
 
 ```
 
@@ -262,4 +267,4 @@ plot2
 Loadenthal, Michael, Lauren Donahoe, Madison Weaver, Sara Godfrey, Kathryn Blowers, et. al. “The Prosecution Project Dataset,” the Prosecution Project, 2023 [dataset]. https://theprosecutionproject.org/
 
 ## Code
-This descriptive analysis was created by Jeremy Allen using R, tidyverse, janitor, and RColorBrewer packages. The report is built with Quarto. The code is available on [GitHub](https://github.com/jeremy-allen/prosecution.git)
+This descriptive analysis was created by Jeremy Allen using R, tidyverse, janitor, and RColorBrewer packages. The report is built with Quarto. The code is available on [GitHub](https://github.com/jeremy-allen/prosecution.git).
