Clarity in explanations and info about the data source and a new section on data from 2025

--- a/violence.qmd
+++ b/violence.qmd
@@ -4,8 +4,15 @@ format: html
 code-fold: true
 ---
 
-# Political Violence
-This analysis uses data from The Prosecution Project Dataset (Loadenthal et al. 2023) to examine the number of prosecutions in the United States for violent crimes across ideological affiliations. The dataset includes information on various criminal methods, ideological affiliations, and prosecution details.
+# Political violence in the US: *"The problem is on the left"*
+
+I examine the number of prosecutions and deaths from violent crimes in the United States. Not all violent crimes, just violent crimes that have an ideological motivation and guilty verdict. I use data from The Prosecution Project Dataset (Loadenthal et al. 2023).
+
+After Charlie Kirk was assassinated in September, the US president, Donald Trump, and Elon Musk said the left is the real problem (Suter 2025; Hutzler and Stoddart 2025). They struggle with numbers, so this report looks at reliable numbers. The left,  right, and others commit violence. However, the lopsided swell of violence from the right is obvious for any observer interested in knowledge more than inflammatory politics.
+
+## Prepare the data
+
+Import the data, clean the column names, and remove pending cases and cases without clear guilty verdict, filter for only the US.
 
 ```{r}
 #| message: false
@@ -18,9 +25,6 @@ suppressPackageStartupMessages({
 })
 ```
 
-## Prepare the data
-
-Import the data, clean the column names, and remove pending cases and cases without clear guilty verdict, filter for only the US.
 ```{r}
 #| message: false
 #| warning: false
@@ -49,7 +53,7 @@ df <- df |>
     filter(location_country == "United States")
 ```
 
-There were *`r num_no_clear_guilt`* cases without a clear guilty verdict that were removed from the analysis.
+There are **`r num_no_clear_guilt`** cases without a clear guilty verdict that I remove from the analysis.
 
 How many cases are not linked or motivated politically?
 ```{r}
@@ -62,7 +66,7 @@ cases_not_political <- df |>
     nrow()
 ```
 
-There were *`r cases_not_political`* cases not politically motivated out of a total of *`r total_cases` cases*, which is *`r round((cases_not_political / total_cases) * 100, 2)`%*. So, we will exclude the non-politically motivated cases going forward.
+There are **`r cases_not_political`** cases not politically motivated out of a total of **`r total_cases` cases**, which is **`r round((cases_not_political / total_cases) * 100, 2)`%**. So, I exclude these non-politically motivated cases going forward.
 
 ```{r}
 #| message: false
@@ -98,7 +102,7 @@ df |>
         `Earliest Date` = min(date, na.rm = TRUE),
         `Latest Date` = max(date, na.rm = TRUE)
     ) |> 
-    knitr::kable()
+    knitr::kable(caption = "Table 1: Date Range of the Data")
 ```
 
 ### Which ideological affiliations are represented in the data?
@@ -107,7 +111,10 @@ df |>
 #| warning: false
 df |>
     count(ideological_affiliation) |> 
-    knitr::kable()
+    knitr::kable(
+        col.names = c("Ideological Affiliation", "Number of Prosecutions"),
+        caption = "Table 2: Number of Prosecutions by Ideological Affiliation"
+    )
 ```
 
 ### Simplify ideologies
@@ -126,7 +133,10 @@ df <- df |>
 
 df |>
     count(ideology_simple, sort = TRUE) |> 
-    knitr::kable()
+    knitr::kable(
+        col.names = c("Ideological Affiliation", "Number of Prosecutions"),
+        caption = "Table 3: Number of Prosecutions by Simplified Ideological Affiliation"
+    )
 ```
 
 # Focus on Violence
@@ -163,11 +173,14 @@ df |>
     pivot_wider(names_from = method_type, values_from = n, values_fill = 0) |>
     select(ideology_simple, violent, `non-violent`) |>
     arrange(desc(violent)) |> 
-    knitr::kable()
+    knitr::kable(
+        col.names = c("Ideological Affiliation", "Violent Prosecutions", "Non-Violent Prosecutions"),
+        caption = "Table 4: Number of Violent vs. Non-Violent Prosecutions by Ideological Affiliation"
+    )
 
 ```
 
-## Prosections for violent crimes in the US by ideological affiliation
+## Prosecutions for violent crimes in the US by ideological affiliation
 ```{r}
 #| message: false
 #| warning: false
@@ -189,7 +202,7 @@ ggplot(violent_crimes_by_ideology, aes(x = reorder(ideology_simple, violent_pros
     coord_flip() +
     labs(
         title = "Prosecutions for Violent Crimes in the US",
-        subtitle = "Based on The Prosecution Project Dataset",
+        subtitle = "By Ideological Affiliation of the Perpetrator",
         x = "Ideological Affiliation",
         y = "Number of Prosecutions for Violent Crimes",
         caption = "Source: The Prosecution Project"
@@ -231,24 +244,26 @@ ggplot(df_yearly, aes(x = year, y = prosecutions, fill = ideology_simple)) +
     scale_x_continuous(breaks = scales::pretty_breaks(n = 8)) +
     labs(
         title = "Total Prosecutions of Violent Crimes in the US by Year",
-        subtitle = "By Ideological Affiliation",
+        subtitle = "By Ideological Affiliation of the Perpetrator",
         x = "Year",
         y = "Number of Prosecutions",
-        fill = "Ideological Affiliation",
+        fill = "Perpetrator Ideology",
         caption = "Source: The Prosecution Project"
     ) +
-    guides(fill = guide_legend(ncol = 1)) +
+    guides(fill = guide_legend(ncol = 6)) +
     theme_minimal() +
     theme(
         plot.title = element_text(size = 14, face = "bold"),
         plot.subtitle = element_text(size = 12),
         axis.text = element_text(size = 10),
         axis.title = element_text(size = 11),
-        legend.position = "right",
+        legend.position = "bottom",
         legend.title = element_text(size = 10),
         legend.text = element_text(size = 9)
     )
 ```
+
+## Deaths
 
 ```{r}
 #| message: false
@@ -288,9 +303,9 @@ plot1 <- ggplot(df_deaths, aes(x = reorder(ideology_simple, total_deaths),
     geom_col(fill = "black", alpha = 0.8) +
     coord_flip() +
     labs(
-        title = "Deaths from Violent Crimes Prosecuted in the US",
-        subtitle = "By Ideological Affiliation",
-        x = "Ideological Affiliation",
+        title = "Who Causes More Death by Violent Crime in the US?",
+        subtitle = "By Ideological Affiliation of the Perpetrator",
+        x = "Perpetrator Ideology",
         y = "Deaths",
         caption = "Source: The Prosecution Project"
     ) +
@@ -306,10 +321,19 @@ plot1
 
 ```
 
+## The new rise of leftist violence
+
+Historically, right-wing attacks have been more frequent and far more lethal, though they have seen a sharp decline following Donald Trump's reelection. If we narrow our scope to look at just terrorist attacks, 2025 will be the first year in three decades to see more leftist terrorist attacks in the US than those from the right. This trend follows a pattern where the political party out of power experiences a rise in extremist violence from its fringes (Byman and McCabe 2025). Byman and McCabe do not use the The Prosecution Project data I used, but compiled their own data covering 750 attacks and plots in the United States from January 1, 1994, to July 4, 2025.  Read [their report in the Atlantic.](https://www.theatlantic.com/politics/archive/2025/09/charlie-kirk-left-wing-terrorism/684323/)
 
 ## References
 
-Loadenthal, Michael, Lauren Donahoe, Madison Weaver, Sara Godfrey, Kathryn Blowers, et. al. “The Prosecution Project Dataset,” the Prosecution Project, 2023 [dataset]. https://theprosecutionproject.org/
+Byman, Daniel, and Riley McCabe. 2025. “Left-Wing Terrorism Is on the Rise.” Politics. The Atlantic, September 23. https://www.theatlantic.com/politics/archive/2025/09/charlie-kirk-left-wing-terrorism/684323/.
+
+Hutzler, Alexandra, and Michelle Stoddart. 2025. “Trump Doubles down on Blaming ‘radical Left’ after Vow to Go after Political Violence.” ABC News, September 12. https://abcnews.go.com/Politics/trump-doubles-blaming-radical-left-after-vow-after/story?id=125509965.
+
+Loadenthal, Michael, Lauren Donahoe, Madison Weaver, Sara Godfrey, Kathryn Blowers, et. al. 2023. “The Prosecution Project Dataset,” the Prosecution Project, 2023 [dataset]. https://theprosecutionproject.org/
+
+Suter, Tara. 2025. “Elon Musk: ‘The Left Is the Party of Murder.’” Text. The Hill, September 14. https://thehill.com/policy/technology/5502535-elon-musk-charlie-kirk-death/.
 
 ## Code
 This descriptive analysis was created by Jeremy Allen using R, tidyverse, janitor, and RColorBrewer packages. The report is built with Quarto. The code is available on [GitHub](https://github.com/jeremy-allen/prosecution.git).
